remote/argocd/dd-next-runtime/dd-redis-cache.networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dd-redis-cache
  namespace: default
  labels:
    app: dd-redis-cache
spec:
  podSelector:
    matchLabels:
      app: dd-redis-cache
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              dd.dev/redis-cache-client: 'true'
      ports:
        - protocol: TCP
          port: 6379
  egress: []
